[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Switch/Switch.gd" type="Script" id=1]
[ext_resource path="res://Game/Switch/Switch-0.png" type="Texture" id=2]
[ext_resource path="res://Game/Switch/Switch-1.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42, 48 )

[sub_resource type="Animation" id=2]
resource_name = "Switch"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Switch-0/Switch-1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Switch-0/Switch-1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -125 ), Vector2( 0, -104 ) ]
}

[node name="Switch" type="Area2D"]
collision_layer = 32
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -113.5 )
shape = SubResource( 1 )

[node name="Switch-0" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -80 )

[node name="Switch-1" type="Sprite" parent="Switch-0"]
position = Vector2( 0, -125 )
texture = ExtResource( 3 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Switch = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Switch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Switch_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
